properties and pom.xml changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #JPA Settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.default_schema=finance
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
+#spring.sql.init.mode=always
+#spring.sql.init.data-locations=classpath:data/data.sql
